Archive2/c3/3a21da2084e484/output
main.cpp:5:6: error: redefinition of 'foo'
void foo(const int){ }
     ^
main.cpp:3:6: note: previous definition is here
void foo(int){ }
     ^
1 error generated.
