Archive2/c3/3a21da2084e484/main.cpp
#include <iostream>

void foo(int){ }

void foo(const int){ }

int main(){ }